# zephyr_i2c_LM75A

./: CMakeLists.txt  README.rst  prj.conf
boards/: esp32v1.overlay
src/: main.c
